# verbalized-defaults

./: .gitignore  README.md  pyproject.toml  verbalized-defaults-experiments.md  verbalized-defaults-proposal.md
activity/: 0001-model-and-compute-plan.md  0002-dataset-landscape.md  0003-infra-setup-turing.md  0004-verifier-suite-v0.md  0005-spec-parser-and-ifeval-parity.md  0006-ifeval-adapter-and-schema-coverage.md  0007-schema-v2-benchmark-snapshot.md  0008-ifbench-coverage-and-ifstruct.md  0009-correction-schema-is-a-default-inventory.md  0010-prior-inventory-and-server.md  0011-ifeval-scoring-and-e01-pilot.md  0012-e01-notation-matters-more-than-surfacing.md  0013-notation-effect-replicated-two-models.md  0014-e01-full-benchmark-both-models.md  0015-e03-self-consistency-first-assumed-result.md  0016-quantitative-magnitude-and-qualitative-inventory.md  0017-e03-three-models-family-beats-size.md  0018-e02-binding-and-per-slot-execution.md  0019-correction-length-underproduction-is-universal.md  0020-e04-c2-diagnostic.md  0021-length-truncation-artefact-the-definitive-version.md  0022-e41-prior-battery-the-collision-test.md  0023-blindness-audit-16-agents.md  0024-contradiction-test-is-the-spec-causal.md  0025-the-abc-triangle-execution-not-binding.md  0026-e04-contradiction-metrics.md  0027-deviations-from-design.md  README.md  conclusions.md  findings.md
data/: defaults.json  defaults_raw.jsonl  e01_gemma_final.json  e01_gemma_s5.json  e01_qwen_final.json  e01_qwen_m2.json  e01_qwen_matrix.json  e01_qwen_s5.json  e01_results.json  e02_e2b.json  e02_e4b.json  (+10 more)
(+56 files in other folders)
